--- a/src/index.css
+++ b/src/index.css
@@ -57,14 +57,63 @@ header a {
 /* homepage */
 
 
-.rooms2, .new-rooms2, .dm-rooms2 {
+.rooms2, .new-rooms2, .dm-rooms2, .requests2, .friends2 {
   background: #fff;
   border-radius: 4px;
   margin-bottom: 20px;
   padding: 20px;
   position: relative;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
+  
 }
+
+.new-rooms2{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.requests2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.accept-decline {
+  display: flex;
+  gap: 20px;
+}
+
+.accept {
+  background: var(--primary);
+  border: 0;
+  color: #fff;
+  padding: 10px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+  width: 140px;
+  height: 50px;
+  font-size: 23px;
+  font-weight: bold;
+  user-select: none;
+}
+
+.decline {
+    background: var(--error);
+    border: 0;
+    color: #fff;
+    padding: 10px;
+    font-family: "Poppins";
+    border-radius: 4px;
+    cursor: pointer;
+    width: 140px;
+    height: 50px;
+    font-size: 23px;
+    font-weight: bold;
+    user-select: none;
+}
+
 .rooms2 h4 {
   margin: 0 0 10px 0;
   font-size: 1.2em;
@@ -133,7 +182,45 @@ input {
   font-size: 50px;
   font-weight: bold;
   margin-top: 20px;
+  user-select: none;
 }
+
+.private {
+  background: rgb(68, 68, 208);
+  border: 0;
+  color: #fff;
+  padding: 0px 7px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+  width: 130px;
+  height: 50px;
+  font-size: 15px;
+  font-weight: bold;
+  margin-top: 20px;
+  user-select: none;
+}
+
+.private:hover {
+  background: rgb(34, 34, 158);
+}
+
+.private-cancel {
+  background: var(--error);
+  border: 0;
+  color: #fff;
+  padding: 5px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 13px;
+  user-select: none;
+  width: 70px;
+  height: 37px;
+  margin-top: 10px;
+}
+
 div.error {
   padding: 10px;
   background: #ffefef;
@@ -151,7 +238,7 @@ input.error {
   text-align: center;
 }
 
-.log-out, .create, .join {
+.log-out, .create, .create-dm, .join {
   background: var(--primary);
   border: 0;
   color: #fff;
@@ -162,7 +249,51 @@ input.error {
   width: 120px;
   height: 50px;
   font-size: 18px;
+  user-select: none;
 }
+
+.create {
+  margin-top: 30px;
+}
+
+.join-room2 {
+  background: var(--primary);
+  border: 0;
+  color: #fff;
+  padding: 5px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+  width: 90px;
+  height: 37px;
+  font-size: 13px;
+  user-select: none;
+  font-weight: bold;
+}
+
+.cancel2 {
+  background: var(--error);
+  border: 0;
+  color: #fff;
+  padding: 5px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 13px;
+  user-select: none;
+  width: 70px;
+  height: 37px;
+}
+
+.create-container, .login-container, .signup-container2 {
+margin-top: 15px;
+}
+
+.create {
+  width: 150px;
+}
+
 
 .login-signup-container {
   display: flex;
@@ -179,6 +310,8 @@ input.error {
   font-family: "Poppins";
   border-radius: 4px;
   cursor: pointer;
+  user-select: none;
+  font-weight: bold;
 }
 
 .main-header {
@@ -208,6 +341,7 @@ input.error {
   height: 70px;
   font-size: 21px;
   font-weight: bold;
+  user-select: none;
 }
 
 .chat-room {
@@ -265,6 +399,7 @@ input.error {
   align-items: center; /* Center items vertically */
   padding: 10px;
   border-top: 1px solid #ddd;
+
 }
 
 .enter-message input {
@@ -289,6 +424,7 @@ input.error {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  user-select: none;
 }
 
 .enter-message button:hover {
@@ -333,12 +469,37 @@ input.error {
   margin-bottom: 10px;
 }
 
-form.signup, form.login {
+form.signup, form.login, form.my-profile, .profile {
   max-width: 400px;
   margin: 40px auto;
   padding: 20px;
   background: #fff;
   border-radius: 4px;
+}
+
+.password-required {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color:white;
+  border: 2px solid #000;
+  box-shadow: 24;
+  max-width: 400px;
+  margin: 40px auto;
+  padding: 20px;
+  gap: 3;
+  z-index: 20; /* Make sure it's above the overlay */
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
 .rooms {
@@ -362,7 +523,7 @@ form.signup, form.login {
 .chat-right {
   display: flex;
   flex-direction: column;
-  height: 70.7vh; /* Ensures that chat-right takes up 80% of the viewport height */
+  height: 78.7vh; /* Ensures that chat-right takes up 80% of the viewport height */
 }
 
 .users {
@@ -373,6 +534,8 @@ form.signup, form.login {
   border-bottom-right-radius: 4px;
   scrollbar-width: thin;
   background-color: #fff;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .material-symbols-outlined {
@@ -403,6 +566,7 @@ form.create-room {
   display: flex;
   align-items: center;
   gap: 30px;
+  user-select: none;
 }
 
 .nav2 {
@@ -453,3 +617,211 @@ button:hover {
   cursor: pointer;
 }
 
+.users-flex {
+  display: flex;
+  align-items: flex-end;
+  gap: 7px;
+}
+
+.users-flex h2{
+  margin-bottom: 5px;
+}
+.online {
+color: green;
+}
+
+.offline {
+  color: red;
+}
+
+.info-content {
+  display: none;
+  position: absolute;
+  left: 600px;
+  top: 17px;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 999;
+  padding: 10px;
+}
+
+.info:hover .info-content {
+  display: block;
+}
+
+.bio-flex {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.my-profile p {
+  margin: 0px;
+}
+
+.h3-1 {
+  margin: 0px;
+}
+
+.h3-2 {
+  margin-bottom: 0px;
+  margin-top: 15px;
+}
+
+.delete-user {
+  margin-top: 35px;
+}
+
+.delete-user-button {
+  background: var(--error);
+  border: 0;
+  color: #fff;
+  padding: 10px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  width: 150px;
+  height: 50px;
+  font-size: 16px;
+  user-select: none;
+}
+
+.delete-user-button:hover {
+  background: #a91343;
+}
+
+.decline:hover {
+  background: #a91343;
+}
+
+.update-cancel-container {
+  margin-top: 10px;
+}
+
+.update-bio {
+  background: var(--primary);
+  border: 0;
+  color: #fff;
+  padding: 10px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-right: 20px;
+}
+
+.send-request {
+  background: var(--primary);
+  border: 0;
+  color: #fff;
+  padding: 10px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-right: 20px;
+  font-size: 14px;
+  height: 44px;
+}
+
+.cancel-bio {
+  background: var(--error);
+  border: 0;
+  color: #fff;
+  padding: 10px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-right: 20px;
+}
+
+.cancel-bio:hover, .cancel2:hover, .private-cancel:hover {
+  background: #a91343;
+}
+
+.leave-room-button {
+  background: var(--error);
+  border: 0;
+  color: #fff;
+  padding: 10px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  align-items: center;
+  user-select: none;
+  height: 50px;
+  width: 170px;
+  font-size: 20px;
+}
+
+.leave-room-button:hover {
+  background: #a91343;
+}
+
+.leave-room {
+  margin-top: 10px;
+  text-align: center;
+}
+
+.friends2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.friends-flex {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.remove-friend {
+  background: var(--error);
+    border: 0;
+    color: #fff;
+    padding: 10px;
+    font-family: "Poppins";
+    border-radius: 4px;
+    cursor: pointer;
+    width: 220px;
+    height: 50px;
+    font-size: 23px;
+    font-weight: bold;
+    user-select: none;
+}
+
+.remove-friend:hover {
+  background: #a91343;
+}
+
+a:visited {
+  color: inherit;
+  text-decoration: none; 
+}
+
+a:hover, .dropdown h3:hover{
+  color: blue;
+}
+
+.link:hover {
+  color: black;
+}
+
+.room-name {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 0px;
+}
+
+.password-buttons {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  margin-top: 10px;
+  width: 300px;
+}
