--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 /* layout */
 :root {
-  --primary: #1aac83;
+  --primary: #1f5de2;
   --error: #e7195a;
 }
 
@@ -11,19 +11,19 @@ body {
   background: #f1f1f1;
   margin: 0;
   font-family: "Poppins";
+  overflow: hidden;
 }
 
-/*.main {
+.main {
   background-image: url('./assets/main.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
+  min-height: 84.95vh;
+  margin: 0;
+  padding: 0;
+} 
 
 header {
   background: #fff;
@@ -48,26 +48,33 @@ header a {
   text-decoration: none;
 }
 .pages{
-  max-width: 1400px;
-  padding: 20px;
-  padding-bottom: 10px;
   margin: 110px auto 0; /* Add top margin to avoid overlap with fixed header */
+}
+
+.container {
+  padding: 20px 30px;
+  padding-bottom: 10px;
 }
 
 /* homepage */
 
+.home {
+  height: 83vh;
+  overflow: hidden;
+}
 
 .rooms2, .new-rooms2, .dm-rooms2, .requests2, .friends2 {
   background: #fff;
   border-radius: 4px;
+  margin-top: 3px;
   margin-bottom: 20px;
   padding: 20px;
   position: relative;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
-  
 }
 
-.new-rooms2{
+
+.new-rooms2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -506,18 +513,22 @@ form.signup, form.login, form.my-profile, .profile {
   flex: 1; /* Take up available space */
   overflow-y: auto; /* Allow vertical scrolling */
   scrollbar-width: thin;
-  height: 69vh;
+  height: 65vh;
+  background-color: #f1f1f1b6;
+  border: 3px solid black;
 }
 
 .dm-rooms {
   flex: 1; /* Take up available space */
   overflow-y: auto; /* Allow vertical scrolling */
   scrollbar-width: thin;
-  height: 69vh;
+  height: 65vh;
+  background-color: #f1f1f1b6;
+  border: 3px solid black;
 }
 
 .chat-room-container {
-  height: 60vh;
+  overflow: hidden;
 }
 
 .chat-right {
@@ -582,7 +593,7 @@ form.create-room {
 }
 
 button:hover {
-  background: #138a6b;
+  background: #1a53c2;
 }
 
 .dropdown {
@@ -798,12 +809,16 @@ color: green;
   background: #a91343;
 }
 
+.username {
+  color: black;
+}
+
 a:visited {
-  color: inherit;
+  color: black;
   text-decoration: none; 
 }
 
-a:hover, .dropdown h3:hover{
+a:hover, .username:hover, .dropdown h3:hover{
   color: blue;
 }
 
@@ -825,3 +840,4 @@ a:hover, .dropdown h3:hover{
   margin-top: 10px;
   width: 300px;
 }
+
